--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <title>Playstation</title>
 </head>
 <body>
+    <header class="">
+        <div class="header_top bg-black px-3 d-flex justify-content-end align-items-center">
+            <img class="logo_header" src="img/sony_logo.svg" alt="logo-sony">
+        </div>
+        <div class="header_bottom">
+            
+        </div>
+    </header>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
