--- a/index.html
+++ b/index.html
@@ -95,6 +95,25 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="hero text-white">
+            <div class="hero_jumbo">
+                <img src="img/jumbo-bg.png" alt="returnal-hero">
+            </div>
+            <div class="container  ">
+                <div class="row">
+                    <div class="col col-xxl-4">
+                        <div class="hero_text">
+                            <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
+                            <h2 class="my-3">Rompi il cerchio</h2>
+                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                            <button class="btn btn_orange my-3">acquista ora</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
