modificato il layout dell'hero

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <div class="hero_jumbo">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
             </div>
-            <div class="container  ">
+            <div class="container ">
                 <div class="row">
                     <div class="col col-xxl-4">
                         <div class="hero_text">
@@ -110,6 +110,27 @@
                             <button class="btn btn_orange my-3">acquista ora</button>
                         </div>
                     </div>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="">
+                    </div>
+
                 </div>
             </div>
         </section>
