--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="row mt-4">
+                <div class="hero_carousel row mt-4">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
                     </div>
