--- a/index.html
+++ b/index.html
@@ -134,8 +134,48 @@
                 </div>
             </div>
         </section>
+        <section class="play_5 py-5">
+            <div class="play_5_header text-center">
+                <h5 class="text-uppercase">play has no limits</h4>
+                <h2>Ecco la Playstation 5</h2>
+                <p class="py-4">Tuffati in nuove possibilita' di gioco completamente inaspettate</p>
+            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-12 col-md-6">
+                        <h2>Console Playstation 5</h2>  
+                        <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
+                        <button class="btn btn_blue">maggiori informazioni</button>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
+                    </div>
+                </div>
+                <div class="row text-center">
+                   <div class="col-4 col-md">
+                    <img class="img-fluid" src="img/playstation-5-thumb.png" alt=""> 
+                    <h5 class="d-none d-md-block py-2">Console ps5</h4>
+                   </div>
+                   <div class="col-4 col-md">
+                       <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+                       <h5 class="d-none d-md-block py-2">Controller wireless Dualsense</h4>
+                   </div>
+                   <div class="col-4 col-md">
+                    <img class="img-fluid" src="img/headset-thumb.png" alt="">
+                    <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3</h4>
+                   </div>
+                   <div class="col-4 col-md">
+                    <img class="img-fluid" src="img/remote-thumb.png" alt="">
+                    <h5 class="d-none d-md-block py-2">Telecomando Media</h4>
+                   </div>
+                   <div class="col-4 col-md">
+                    <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+                    <h5 class="d-none d-md-block py-2">Telecamera HD</h4>
+                   </div> 
+                </div>
+            </div>   
+        </section>
     </main>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
