completata sezione ps5

--- a/index.html
+++ b/index.html
@@ -151,25 +151,25 @@
                         <img class="img-fluid" src="img/playstation-5-thumb.png" alt="">
                     </div>
                 </div>
-                <div class="row text-center">
+                <div class=" play_5_carousel row text-center">
                    <div class="col-4 col-md">
-                    <img class="img-fluid" src="img/playstation-5-thumb.png" alt=""> 
+                    <img src="img/playstation-5-thumb.png" alt=""> 
                     <h5 class="d-none d-md-block py-2">Console ps5</h4>
                    </div>
                    <div class="col-4 col-md">
-                       <img class="img-fluid" src="img/joypad-thumb.png" alt="">
+                       <img  src="img/joypad-thumb.png" alt="">
                        <h5 class="d-none d-md-block py-2">Controller wireless Dualsense</h4>
                    </div>
                    <div class="col-4 col-md">
-                    <img class="img-fluid" src="img/headset-thumb.png" alt="">
+                    <img  src="img/headset-thumb.png" alt="">
                     <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3</h4>
                    </div>
                    <div class="col-4 col-md">
-                    <img class="img-fluid" src="img/remote-thumb.png" alt="">
+                    <img  src="img/remote-thumb.png" alt="">
                     <h5 class="d-none d-md-block py-2">Telecomando Media</h4>
                    </div>
                    <div class="col-4 col-md">
-                    <img class="img-fluid" src="img/camera-thumb.jpg" alt="">
+                    <img  src="img/camera-thumb.jpg" alt="">
                     <h5 class="d-none d-md-block py-2">Telecamera HD</h4>
                    </div> 
                 </div>
