--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         </div>
     </header>
     <main>
+        <!-- HERO RETURNAL -->
         <section class="hero text-white">
             <div class="hero_jumbo">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
@@ -134,6 +135,7 @@
                 </div>
             </div>
         </section>
+        <!-- SEZIONE PLAYSTATION 5 -->
         <section class="play_5 py-5">
             <div class="play_5_header text-center">
                 <h5 class="text-uppercase">play has no limits</h4>
@@ -174,6 +176,63 @@
                    </div> 
                 </div>
             </div>   
+        </section>
+        <!-- sezione it takes two -->
+        <section class="hero text-white">
+            <div class="hero_jumbo">
+                <img src="img/it-takes-two-hero-banner-desktop.jpg" alt="returnal-hero">
+            </div>
+            <div class="container ">
+                <div class="row">
+                    <div class="col col-xxl-4">
+                        <div class="hero_text">
+                            <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
+                            <h2 class="my-3">Rompi il cerchio</h2>
+                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                            <button class="btn btn_orange my-3">acquista ora</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero_carousel row mt-4">
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-4 col-xxl-2 my-3">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                    </div>
+                    
+                </div>
+            </div>
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
