--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                    </div>
                    <div class="col-4 col-md">
                        <img  src="img/joypad-thumb.png" alt="">
-                       <h5 class="d-none d-md-block py-2">Controller wireless Dualsense</h5>
+                       <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
                    </div>
                    <div class="col-4 col-md">
                     <img  src="img/headset-thumb.png" alt="">
-                    <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3</h5>
+                    <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
                    </div>
                    <div class="col-4 col-md">
                     <img  src="img/remote-thumb.png" alt="">
@@ -193,42 +193,54 @@
                         </div>
                     </div>
                 </div>
-                <div class="hero_carousel row mt-4">
+                <div class="hero_carousel row mt-4 text-black">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
+                        <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     
                 </div>
