--- a/index.html
+++ b/index.html
@@ -78,18 +78,19 @@
                     <div class=" header_right col d-none d-xxl-flex justify-content-end align-items-center">
                         <ul class="nav navbar-light d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
-                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     My Playstation
                                 </a>
                             </li>
                             <li class="nav-item">
-                              <a class="nav-link" href="#"><button class="btn btn_black text-capitalize">accedi</button></a>
+                                <a class="nav-link" href="#"><button
+                                        class="btn btn_black text-capitalize">accedi</button></a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#"><img src="img/lens.svg" alt=""></a>
-                              </li>
-                          </ul>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -107,7 +108,8 @@
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
                             <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
+                                in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
                             <button class="btn btn_orange my-3">acquista ora</button>
                         </div>
                     </div>
@@ -138,14 +140,14 @@
         <!-- SEZIONE PLAYSTATION 5 -->
         <section class="play_5 py-5">
             <div class="play_5_header text-center">
-                <h5 class="text-uppercase">play has no limits</h4>
+                <h5 class="text-uppercase">play has no limits</h5>
                 <h2>Ecco la Playstation 5</h2>
                 <p class="py-4">Tuffati in nuove possibilita' di gioco completamente inaspettate</p>
             </div>
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-6">
-                        <h2>Console Playstation 5</h2>  
+                        <h2>Console Playstation 5</h2>
                         <p>Sperimenta la nuova generazione di incredibili giochi PlayStation</p>
                         <button class="btn btn_blue">maggiori informazioni</button>
                     </div>
@@ -154,31 +156,31 @@
                     </div>
                 </div>
                 <div class=" play_5_carousel row text-center">
-                   <div class="col-4 col-md">
-                    <img src="img/playstation-5-thumb.png" alt=""> 
-                    <h5 class="d-none d-md-block py-2">Console ps5</h5>
-                   </div>
-                   <div class="col-4 col-md">
-                       <img  src="img/joypad-thumb.png" alt="">
-                       <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
-                   </div>
-                   <div class="col-4 col-md">
-                    <img  src="img/headset-thumb.png" alt="">
-                    <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
-                   </div>
-                   <div class="col-4 col-md">
-                    <img  src="img/remote-thumb.png" alt="">
-                    <h5 class="d-none d-md-block py-2">Telecomando Media</h5>
-                   </div>
-                   <div class="col-4 col-md">
-                    <img  src="img/camera-thumb.jpg" alt="">
-                    <h5 class="d-none d-md-block py-2">Telecamera HD</h5>
-                   </div> 
+                    <div class="col-4 col-md">
+                        <img src="img/playstation-5-thumb.png" alt="">
+                        <h5 class="d-none d-md-block py-2">Console ps5</h5>
+                    </div>
+                    <div class="col-4 col-md">
+                        <img src="img/joypad-thumb.png" alt="">
+                        <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
+                    </div>
+                    <div class="col-4 col-md">
+                        <img src="img/headset-thumb.png" alt="">
+                        <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
+                    </div>
+                    <div class="col-4 col-md">
+                        <img src="img/remote-thumb.png" alt="">
+                        <h5 class="d-none d-md-block py-2">Telecomando Media</h5>
+                    </div>
+                    <div class="col-4 col-md">
+                        <img src="img/camera-thumb.jpg" alt="">
+                        <h5 class="d-none d-md-block py-2">Telecamera HD</h5>
+                    </div>
                 </div>
-            </div>   
+            </div>
         </section>
-        <!-- sezione it takes two -->
-        <section class="hero text-white">
+        <!-- HERO it takes two -->
+        <section class="hero text-white it_takes_two">
             <div class="hero_jumbo">
                 <img src="img/it-takes-two-hero-banner-desktop.jpg" alt="returnal-hero">
             </div>
@@ -188,12 +190,13 @@
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
                             <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
+                                in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
                             <button class="btn btn_orange my-3">acquista ora</button>
                         </div>
                     </div>
                 </div>
-                <div class="hero_carousel row mt-4 text-black">
+                <div class=" row  hero_carousel mt-4 ">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
@@ -242,7 +245,31 @@
                         <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
-                    
+
+                </div>
+            </div>
+        </section>
+        <!-- sezione play 4 -->
+        <section class="play_4 py-5">
+            <div class="play_4_header text-center">
+                <h2>Esplora PlayStation&reg; 4</h2>
+                <p class="pt-4">Giochi incredibili e instrattenimento senza fine</p>
+                <p class="pb-4">Non c'e' mai stato un momento migliore per giocare sulla tua PS4</p>
+            </div>
+            <div class="container">
+                <div class=" play_4_carousel row text-center">
+                    <div class="col col-md-4">
+                        <img class="img-fluid" src="img/ps4-slim-homepage-image-block.jpg" alt="">
+                        <h4 class="d-none d-md-block py-2">Playstation 4</h4>
+                    </div>
+                    <div class="col col-md-4">
+                        <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="">
+                        <h4 class="d-none d-md-block py-2">PlayStation VR</h4>
+                    </div>
+                    <div class="col col-md-4">
+                        <img class="img-fluid" src="img/dualshock-4-listing-thumb.jpg" alt="">
+                        <h4 class="d-none d-md-block py-2">Accessori</h4>
+                    </div>
                 </div>
             </div>
         </section>
