--- a/index.html
+++ b/index.html
@@ -279,6 +279,21 @@
                 </div>
             </div>
         </section>
+        <!-- SEZIONE PS PLUS -->
+        <section class="ps_plus">
+            <div class="container">
+                <div class="row align-items-center justify-content-between">
+                    <div class="col-12 col-md-6">
+                        <img class="ps-plus-logo" src="img/ps-plus-logo.png" alt="">
+                        <p>Migliora la tua epserienza Playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <button class="btn btn_grey">esplora playstation plus</button>
+                    </div>
+                    <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
+                        <img class="ps-plus-games" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
