--- a/index.html
+++ b/index.html
@@ -282,14 +282,14 @@
         <!-- SEZIONE PS PLUS -->
         <section class="ps_plus">
             <div class="container">
-                <div class="row align-items-center justify-content-between">
-                    <div class="col-12 col-md-6">
+                <div class="row align-items-center justify-content-between ">
+                    <div class="col-12 col-md-6 py-5 py-md-0">
                         <img class="ps-plus-logo" src="img/ps-plus-logo.png" alt="">
                         <p>Migliora la tua epserienza Playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
                         <button class="btn btn_grey">esplora playstation plus</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
-                        <img class="ps-plus-games" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        <img class="ps-plus-games img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                     </div>
                 </div>
             </div>
