--- a/index.html
+++ b/index.html
@@ -294,6 +294,26 @@
                 </div>
             </div>
         </section>
+        <!-- sezione sconti store-->
+        <section class="discount py-5">
+            <div class="discount_header text-center">
+                <h2>Nuovi sconti su Playstation Store</h2>
+                <p class="py-4">Sconti pazzeschi, collezzioni curate e saldi stagionali su PS%, PS4 e PS VR, tutti in un unico posto.</p>
+            </div>
+            <div class="container">
+                <div class=" discount_carousel row text-center">
+                    <div class="col-12 col-md-4 my-3">
+                        <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="">
+                    </div>
+                    <div class="col-12 col-md-4 my-3">
+                        <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
