implementata sezione ps now

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <section class="discount py-5">
             <div class="discount_header text-center">
                 <h2>Nuovi sconti su Playstation Store</h2>
-                <p class="py-4">Sconti pazzeschi, collezzioni curate e saldi stagionali su PS%, PS4 e PS VR, tutti in un unico posto.</p>
+                <p class="py-4">Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
             </div>
             <div class="container">
                 <div class=" discount_carousel row text-center">
@@ -310,6 +310,21 @@
                     </div>
                     <div class="col-12 col-md-4 my-3">
                         <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+         <!-- SEZIONE PS NOW -->
+         <section class="ps_now">
+            <div class="container">
+                <div class="row align-items-center justify-content-between ">
+                    <div class="col-12 col-md-6 py-5 py-md-0">
+                        <img class="ps-plus-logo" src="img/ps-now-logo-two-column.png" alt="">
+                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                        <button class="btn btn_white">esplora playstation now</button>
+                    </div>
+                    <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
+                        <img class="ps-plus-games img-fluid" src="img/ps-now-april-featured-image-block.png" alt="">
                     </div>
                 </div>
             </div>
