--- a/index.html
+++ b/index.html
@@ -285,11 +285,13 @@
                 <div class="row align-items-center justify-content-between ">
                     <div class="col-12 col-md-6 py-5 py-md-0">
                         <img class="ps-plus-logo" src="img/ps-plus-logo.png" alt="">
-                        <p>Migliora la tua epserienza Playstation con l'accesso a multigiocatore online, giochi mensili, sconti esclusivi e altro ancora.</p>
+                        <p>Migliora la tua epserienza Playstation con l'accesso a multigiocatore online, giochi mensili,
+                            sconti esclusivi e altro ancora.</p>
                         <button class="btn btn_grey">esplora playstation plus</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
-                        <img class="ps-plus-games img-fluid" src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
+                        <img class="ps-plus-games img-fluid"
+                            src="img/ps-plus-april-monthly-games-featured-image-block.png" alt="">
                     </div>
                 </div>
             </div>
@@ -298,7 +300,8 @@
         <section class="discount py-5">
             <div class="discount_header text-center">
                 <h2>Nuovi sconti su Playstation Store</h2>
-                <p class="py-4">Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un unico posto.</p>
+                <p class="py-4">Sconti pazzeschi, collezzioni curate e saldi stagionali su PS5, PS4 e PS VR, tutti in un
+                    unico posto.</p>
             </div>
             <div class="container">
                 <div class=" discount_carousel row text-center">
@@ -314,13 +317,14 @@
                 </div>
             </div>
         </section>
-         <!-- SEZIONE PS NOW -->
-         <section class="ps_now">
+        <!-- SEZIONE PS NOW -->
+        <section class="ps_now">
             <div class="container">
                 <div class="row align-items-center justify-content-between ">
                     <div class="col-12 col-md-6 py-5 py-md-0">
                         <img class="ps-plus-logo" src="img/ps-now-logo-two-column.png" alt="">
-                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 o PC Windows, con nuovi titoli aggiunti ogni mese.</p>
+                        <p>Ottieni l'accesso immediato a una vastissima raccolta di oltre 800 giochi per PS4, PS3, PS2 o
+                            PC Windows, con nuovi titoli aggiunti ogni mese.</p>
                         <button class="btn btn_white">esplora playstation now</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
@@ -328,6 +332,27 @@
                     </div>
                 </div>
             </div>
+        </section>
+        <!-- socials -->
+        <section class="socials py-5">
+            <div class="container text-center">
+                <h2>Seguici sui social media</h2>
+                <div class="row ">
+                    <div class="col-6 col-sm-3 my-3">
+                        <img class="img-fluid"  src="img/twitter.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 my-3">
+                        <img class="img-fluid"  src="img/facebook.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 my-3">
+                        <img class="img-fluid"  src="img/instagram.jpg" alt="">
+                    </div>
+                    <div class="col-6 col-sm-3 my-3">
+                        <img class="img-fluid"  src="img/youtube.png" alt="">
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
