--- a/index.html
+++ b/index.html
@@ -352,9 +352,19 @@
                     </div>
                 </div>
             </div>
-
-        </section>
+        </section>   
     </main>
+    <!-- footer -->
+    <footer class="py-3">
+        <div class="footer_top">
+        </div>
+        <div class="footer_bottom container py-3">
+            <div class="col col-xxl-6">
+                <img class="py-3" src="img/sie-logo.svg" alt="logo-sie">
+                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispetivi proprietari. Tutti dirt iservati. Maggiori info</p>
+            </div>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
