--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
         <div class="footer_bottom container py-3">
             <div class="col col-xxl-6">
                 <img class="py-3" src="img/sie-logo.svg" alt="logo-sie">
-                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispetivi proprietari. Tutti dirt iservati. Maggiori info</p>
+                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti diritti riservati. <a href="#">Maggiori info</a></p>
             </div>
         </div>
     </footer>
