fixato comportamento testo hero

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
             <div class="hero_jumbo">
                 <img src="img/jumbo-bg.png" alt="returnal-hero">
             </div>
-            <div class="container ">
+            <div class="container">
                 <div class="row">
-                    <div class="col col-xxl-4">
+                    <div class="col-12  col-xxl-4">
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
                             <h2 class="my-3">Rompi il cerchio</h2>
@@ -339,29 +339,33 @@
                 <h2>Seguici sui social media</h2>
                 <div class="row ">
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid"  src="img/twitter.jpg" alt="">
+                        <img class="img-fluid" src="img/twitter.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid"  src="img/facebook.jpg" alt="">
+                        <img class="img-fluid" src="img/facebook.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid"  src="img/instagram.jpg" alt="">
+                        <img class="img-fluid" src="img/instagram.jpg" alt="">
                     </div>
                     <div class="col-6 col-sm-3 my-3">
-                        <img class="img-fluid"  src="img/youtube.png" alt="">
+                        <img class="img-fluid" src="img/youtube.png" alt="">
                     </div>
                 </div>
             </div>
-        </section>   
+        </section>
     </main>
     <!-- footer -->
     <footer class="py-3">
         <div class="footer_top">
+
         </div>
         <div class="footer_bottom container py-3">
             <div class="col col-xxl-6">
                 <img class="py-3" src="img/sie-logo.svg" alt="logo-sie">
-                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti diritti riservati. <a href="#">Maggiori info</a></p>
+                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi
+                    commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi
+                    registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti diritti riservati.
+                    <a href="#">Maggiori info</a></p>
             </div>
         </div>
     </footer>
