--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     </main>
     <!-- footer -->
     <footer class="py-3">
-        <div class="footer_top">
+        <div class="footer_top py-5">
             <div class="container">
                 <div class="row">
                     <div class="col-12 col-xxl-6">
