rework hero com background image

--- a/index.html
+++ b/index.html
@@ -98,22 +98,24 @@
     </header>
     <main>
         <!-- HERO RETURNAL -->
-        <section class="hero text-white  ">
-            <div class="hero_jumbo ratio ratio-21x9">
-                <img src="img/jumbo-bg.png" alt="returnal-hero">
-            </div>
-            <div class="container">
-                <div class="row ">
-                    <div class="col-12  col-xxl-4">
-                        <div class="hero_text">
-                            <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
-                            <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
-                                in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
-                            <button class="btn btn_orange my-3">acquista ora</button>
+        <section class="hero text-white">
+            <div class="hero_jumbo ">
+                <div class="container container_pos">
+                    <div class="row ">
+                        <div class="col-12  col-xxl-4">
+                            <div class="hero_text">
+                                <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
+                                <h2 class="my-3">Rompi il cerchio</h2>
+                                <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
+                                    in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
+                                <button class="btn btn_orange my-3">acquista ora</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            
+            <div class="container">
                 <div class="hero_carousel row mt-4">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="">
@@ -180,7 +182,7 @@
             </div>
         </section>
         <!-- HERO it takes two -->
-        <section class="hero  text-white it_takes_two">
+        <!-- <section class="hero  text-white it_takes_two">
             <div class="hero_jumbo">
                 <img src="img/it-takes-two-hero-banner-desktop.jpg" alt="returnal-hero">
             </div>
@@ -190,7 +192,9 @@
                         <div class="hero_text">
                             <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
                             <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                            <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre
+                                vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il
+                                suo genere.</p>
                             <button class="btn btn_orange my-3">acquista ora</button>
                         </div>
                     </div>
@@ -247,7 +251,7 @@
 
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- sezione play 4 -->
         <section class="play_4 py-5">
             <div class="play_4_header text-center">
@@ -401,7 +405,8 @@
                 <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi
                     commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi
                     registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti diritti riservati.
-                    <a href="#">Maggiori info</a></p>
+                    <a href="#">Maggiori info</a>
+                </p>
             </div>
         </div>
     </footer>
