rework heros completo

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <main>
         <!-- HERO RETURNAL -->
         <section class="hero text-white">
-            <div class="hero_jumbo ">
+            <div class="hero_jumbo_returnal ">
                 <div class="container container_pos">
                     <div class="row ">
                         <div class="col-12  col-xxl-4">
@@ -182,23 +182,22 @@
             </div>
         </section>
         <!-- HERO it takes two -->
-        <!-- <section class="hero  text-white it_takes_two">
-            <div class="hero_jumbo">
-                <img src="img/it-takes-two-hero-banner-desktop.jpg" alt="returnal-hero">
-            </div>
-            <div class="container ">
-                <div class="row">
-                    <div class="col col-xxl-4">
-                        <div class="hero_text">
-                            <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
-                            <h2 class="my-3">Rompi il cerchio</h2>
-                            <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre
-                                vite in It Takes Two, un gioco d'avventura cooperativa a piattaforme che stravolge il
-                                suo genere.</p>
-                            <button class="btn btn_orange my-3">acquista ora</button>
+        <section class="hero  text-white it_takes_two">
+            <div class="hero_jumbo_it2 ">
+                <div class="container container_pos">
+                    <div class="row ">
+                        <div class="col-12  col-xxl-4">
+                            <div class="hero_text">
+                                <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
+                                <h2 class="my-3">Un' avventura cooperativa selvaggia ti attende</h2>
+                                <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre vite in It Takes Two, un gicoc d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                                <button class="btn btn_orange my-3">acquista ora</button>
+                            </div>
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="container ">
                 <div class=" row  hero_carousel mt-4 ">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="">
@@ -251,7 +250,7 @@
 
                 </div>
             </div>
-        </section> -->
+        </section>
         <!-- sezione play 4 -->
         <section class="play_4 py-5">
             <div class="play_4_header text-center">
