implementati hover e bordo su prodotti ps5

--- a/index.html
+++ b/index.html
@@ -159,24 +159,34 @@
                 </div>
                 <div class=" play_5_carousel row text-center">
                     <div class="col-4 col-md">
-                        <img src="img/playstation-5-thumb.png" alt="">
-                        <h5 class="d-none d-md-block py-2">Console ps5</h5>
+                        <div class="play_5_card">
+                            <img src="img/playstation-5-thumb.png" alt="">
+                            <h5 class="d-none d-md-block py-2">Console ps5</h5>
+                    </div>
                     </div>
                     <div class="col-4 col-md">
-                        <img src="img/joypad-thumb.png" alt="">
-                        <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
+                        <div class="play_5_card">
+                            <img src="img/joypad-thumb.png" alt="">
+                            <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
+                    </div>
                     </div>
                     <div class="col-4 col-md">
-                        <img src="img/headset-thumb.png" alt="">
-                        <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
+                        <div class="play_5_card">
+                            <img src="img/headset-thumb.png" alt="">
+                            <h5 class="d-none d-md-block py-2">Cuffie wireless con microfono PULSE 3&#8482;</h5>
+                        </div>
                     </div>
                     <div class="col-4 col-md">
-                        <img src="img/remote-thumb.png" alt="">
-                        <h5 class="d-none d-md-block py-2">Telecomando Media</h5>
+                        <div class="play_5_card">
+                            <img src="img/remote-thumb.png" alt="">
+                            <h5 class="d-none d-md-block py-2">Telecomando Media</h5>
+                        </div>
                     </div>
                     <div class="col-4 col-md">
-                        <img src="img/camera-thumb.jpg" alt="">
-                        <h5 class="d-none d-md-block py-2">Telecamera HD</h5>
+                        <div class="play_5_card">
+                            <img src="img/camera-thumb.jpg" alt="">
+                            <h5 class="d-none d-md-block py-2">Telecamera HD</h5>
+                        </div>
                     </div>
                 </div>
             </div>
