--- a/index.html
+++ b/index.html
@@ -106,7 +106,8 @@
                             <div class="hero_text">
                                 <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="">
                                 <h2 class="my-3">Rompi il cerchio</h2>
-                                <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni rinascita
+                                <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni
+                                    rinascita
                                     in questo esplosivo thriller fantascientifico, disponibile in esclusiva su PS5</p>
                                 <button class="btn btn_orange my-3">acquista ora</button>
                             </div>
@@ -114,7 +115,7 @@
                     </div>
                 </div>
             </div>
-            
+
             <div class="container">
                 <div class="hero_carousel row mt-4">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
@@ -162,13 +163,13 @@
                         <div class="play_5_card">
                             <img src="img/playstation-5-thumb.png" alt="">
                             <h5 class="d-none d-md-block py-2">Console ps5</h5>
-                    </div>
+                        </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
                             <img src="img/joypad-thumb.png" alt="">
                             <h5 class="d-none d-md-block py-2">Controller wireless Dualsense&#8482;</h5>
-                    </div>
+                        </div>
                     </div>
                     <div class="col-4 col-md">
                         <div class="play_5_card">
@@ -200,7 +201,9 @@
                             <div class="hero_text">
                                 <img class="hero_logo my-2" src="img/it-takes-two-logo.png" alt="">
                                 <h2 class="my-3">Un' avventura cooperativa selvaggia ti attende</h2>
-                                <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre vite in It Takes Two, un gicoc d'avventura cooperativa a piattaforme che stravolge il suo genere.</p>
+                                <p class="my-3">Trova un amico e partite insieme per l'avventura piu' folle delle vostre
+                                    vite in It Takes Two, un gicoc d'avventura cooperativa a piattaforme che stravolge
+                                    il suo genere.</p>
                                 <button class="btn btn_orange my-3">acquista ora</button>
                             </div>
                         </div>
