implementati i bordi sui button

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class=" header_right col d-none d-xxl-flex justify-content-end align-items-center">
                         <ul class="nav navbar-light d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button"
                                     data-bs-toggle="dropdown" aria-expanded="false">
                                     My Playstation
                                 </a>
