primo refactoring colre testi

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <div class=" header_right col d-none d-xxl-flex justify-content-end align-items-center">
                         <ul class="nav navbar-light d-flex align-items-center">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown" role="button"
-                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-secondary" href="#" id="navbarDropdown"
+                                    role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     My Playstation
                                 </a>
                             </li>
@@ -104,7 +104,8 @@
                     <div class="row ">
                         <div class="col-12  col-xxl-4">
                             <div class="hero_text">
-                                <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png" alt="returnal-banner-logo">
+                                <img class="hero_logo my-2" src="img/returnal-hero-banner-logo.png"
+                                    alt="returnal-banner-logo">
                                 <h2 class="my-3">Rompi il cerchio</h2>
                                 <p class="my-3">Rialzati dopo ogni sconfitta e affrontya una nuova sfida con ogni
                                     rinascita
@@ -122,19 +123,22 @@
                         <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
                         <img class="img-fluid" src="img/returnal-listing-thumb-01-ps5.jpg" alt="returnal-listing">
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg" alt="ratchet-and-clank-listing">
+                        <img class="img-fluid" src="img/ratchet-and-clank-rift-apart-keyart.jpg"
+                            alt="ratchet-and-clank-listing">
                     </div>
 
                 </div>
@@ -213,51 +217,63 @@
             <div class="container ">
                 <div class=" row  hero_carousel mt-4 ">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg" alt="tony-hawks-pro-skater">
+                        <img class="img-fluid" src="img/tony-hawks-pro-skater-1-2-store-art.jpg"
+                            alt="tony-hawks-pro-skater">
                         <h5 class="text-capitalize">tony hawk's&#8482; pro skater&#8482; 1 + 2</h5>
                     </div>
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
-                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg" alt="crash-bandicoot-4">
+                        <img class="img-fluid" src="img/crash-bandicoot-4-its-about-time-store-art.jpg"
+                            alt="crash-bandicoot-4">
                         <h5 class="text-capitalize">crash bandicoot 4: it's about time</h5>
                     </div>
 
@@ -283,6 +299,7 @@
                         <img class="img-fluid" src="img/double11-202010-tw-psvr.jpg" alt="psvr">
                         <h4 class=" py-2">PlayStation VR</h4>
                         <p>Oltre 500 titoli ed esperienze di gioco. Scoprili tutti.</p>
+                        <br>
                         <button class="btn btn_blue">Scopri di piu'</button>
                     </div>
                     <div class="col-12 col-md-4">
@@ -321,19 +338,22 @@
             <div class="container">
                 <div class=" discount_carousel row text-center">
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg" alt="games-under-20">
+                        <img class="img-fluid" src="img/playstation-store-games-under-20-spotlight.jpg"
+                            alt="games-under-20">
                     </div>
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg" alt="store-golden-week">
+                        <img class="img-fluid" src="img/playstation-store-golden-week-sale-spotlight.jpg"
+                            alt="store-golden-week">
                     </div>
                     <div class="col-12 col-md-4 my-3">
-                        <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png" alt="free-to-play">
+                        <img class="img-fluid" src="img/playstation-store-free-to-play-spotlight.png"
+                            alt="free-to-play">
                     </div>
                 </div>
             </div>
         </section>
         <!-- SEZIONE PS NOW -->
-        <section class="ps_now">
+        <section class="ps_now text-white">
             <div class="container">
                 <div class="row align-items-center justify-content-between ">
                     <div class="col-12 col-md-6 py-5 py-md-0">
@@ -343,7 +363,8 @@
                         <button class="btn btn_white">esplora playstation now</button>
                     </div>
                     <div class="col-12 col-md-6 d-none d-md-flex justify-content-end">
-                        <img class="ps-plus-games img-fluid" src="img/ps-now-april-featured-image-block.png" alt="ps-now-april">
+                        <img class="ps-plus-games img-fluid" src="img/ps-now-april-featured-image-block.png"
+                            alt="ps-now-april">
                     </div>
                 </div>
             </div>
@@ -378,7 +399,7 @@
                         <img src="img/ps-footer.svg" alt="">
                         <div class="region d-flex gap-2 align-items-center py-5">
                             <img class="globe my-auto" src="img/language-globe.svg" alt="globe">
-                            <p class="my-0">country / region: italy</p>
+                            <p class="text-white my-0 text-capitalize">country / region: italy</p>
                         </div>
                     </div>
                     <div class="col-12 col-md-4 col-xxl-2 ">
@@ -414,10 +435,11 @@
         <div class="footer_bottom container py-3">
             <div class="col col-xxl-6">
                 <img class="py-3" src="img/sie-logo.svg" alt="logo-sie">
-                <p>Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti, nomi dei giochi, nomi
+                <p class="text-white">Website ©2021 Sony Interactive Entertainment Europe Limited. Tutti i contenuti,
+                    nomi dei giochi, nomi
                     commerciali e/o di abbigliamento, marchi registrati, grafica e immagini associati sono marchi
                     registrati e/o materiale protetto da copyright dei rispettivi proprietari. Tutti diritti riservati.
-                    <a href="#">Maggiori info</a>
+                    <a class="text-white" href="#">Maggiori info</a>
                 </p>
             </div>
         </div>
