--- a/index.html
+++ b/index.html
@@ -15,9 +15,12 @@
 
 <body>
     <header class="fixed-top">
+        <!-- header top -->
         <div class="header_top bg-black px-3 d-flex justify-content-end align-items-center">
             <img class="logo_header" src="img/sony_logo.svg" alt="logo-sony">
         </div>
+        <!-- /header top -->
+        <!-- header bottom -->
         <div class="header_bottom bg-white ">
             <div class="container-fluid">
                 <div class="row">
@@ -116,7 +119,7 @@
                     </div>
                 </div>
             </div>
-
+            <!-- carousel hero returnal -->
             <div class="container">
                 <div class="hero_carousel row mt-4">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
@@ -214,6 +217,7 @@
                     </div>
                 </div>
             </div>
+            <!-- carousel hero it takes two -->
             <div class="container ">
                 <div class=" row  hero_carousel mt-4 ">
                     <div class="col-6 col-sm-4 col-xxl-2 my-3">
@@ -311,7 +315,7 @@
                             <h4 class=" py-2">Accessori</h4>
                             <p>Migliora la tua esperienza PS4 con una gamma di accessori ufficiali.</p>
                             <button class="btn btn_blue">Scopri di piu'</button>
-                        </div>  
+                        </div>
                     </div>
                 </div>
             </div>
@@ -416,6 +420,7 @@
     </main>
     <!-- footer -->
     <footer class="py-3">
+        <!-- footer top -->
         <div class="footer_top py-5">
             <div class="container">
                 <div class="row">
@@ -456,6 +461,7 @@
                 </div>
             </div>
         </div>
+        <!-- footer bottom -->
         <div class="footer_bottom container py-3">
             <div class="col col-xxl-6">
                 <img class="py-3" src="img/sie-logo.svg" alt="logo-sie">
