--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
                                                     class="btn btn_black text-capitalize">accedi</button></a>
                                         </li>
                                         <li class="nav-item my-auto">
-                                            <a class="nav-link" href="#"><img class="lens" src="img/lens.svg" alt="lens"></a>
+                                            <a class="nav-link" href="#"><img class="lens" src="img/lens.svg"
+                                                    alt="lens"></a>
                                         </li>
                                     </ul>
                                 </div>
                             </div>
                         </nav>
-                    </div>   
+                    </div>
                 </div>
             </div>
         </div>
